--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,6 @@ html {
         background-attachment: fixed;
     }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
